DSND-2167: Add new DELETE endpoint to filing_history-api (#29)
* DSND-2167: Adding new delete endpoint WIP
* Need to refactor some of the existing code for upsert
* Considering template or strategy pattern

* DSND-2167: Adding template pattern WIP
* implemented most of a template pattern, needs refining

* DSND-2167: Add delete service method

* DSND-2167: Finishing off Delete implementation
* one Itest is stubbornly not working but apart from that done.

* DSND-2167: Finishing off Delete integration tests.
* Changed the ResourceChangedRequest a bit.
* new Json for the itest expected bodies.

* DSND-2167: Adding additional delete transactional test case

* DSND-2167: Cleanup variables

* DSND-2167: Address PR comments and add test coverage

* DSND-2167: Update Readme

* DSND-2167: Test for empty optional when finding document by Id only.

* DSND-2167: Cleanup tests
* Add additional verification for RepositoryTest
* Remove unnecessary test from FilingHistoryServiceTest

---------

Co-authored-by: cgregoryCH <cgregory@companieshouse.gov.uk>